<resources>
    <string name="app_name">WeatherApp</string>

    <!-- Weather Screen -->
    <string name="location">Hà Nội, Việt Nam</string>
    <string name="weather_condition">Mây</string>
    <string name="feels_like">Cảm nhận</string>
    <string name="weather_details">Các thông số thời tiết</string>
    <string name="wind_speed">Tốc độ gió</string>
    <string name="pressure">Áp suất</string>
    <string name="humidity">Khả năng mưa</string>
    <string name="uv_index">Chỉ số UV</string>

    <!-- Units -->
    <string name="kmh">km/h</string>
    <string name="hpa">hpa</string>
    <string name="percent">%</string>

    <!-- Time -->
    <string name="day_night_format">Ngày %1$s° Đêm %2$s°</string>
    <string name="time_format">%1$s, %2$s</string>

    <!-- Navigation -->
    <string name="nav_home">Home</string>
    <string name="nav_broadcast">Broadcast</string>
    <string name="nav_music">Music</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_sample_mvp">Sample MVP</string>

    <!-- Sample Activity -->
    <string name="sample_load_teams_button">Load My Teams</string>

    <!-- Broadcast Fragment -->
    <string name="broadcast_title">Broadcast</string>

    <!-- Music Fragment -->
    <string name="music_title">Music</string>

    <!-- Profile Fragment -->
    <string name="profile_navigate_sample_mvp">Navigate to Sample MVP</string>
    <string name="profile_navigate_sample_api">Navigate to Sample API</string>

    <!-- Home Fragment -->
    <string name="home_current_location">Hà Nội, Việt Nam</string>
    <string name="home_current_temperature">3°</string>
    <string name="home_feels_like_temperature">Cảm nhận -2°</string>
    <string name="home_weather_condition">Mây</string>
    <string name="home_current_time">16:14, 11/03/2025</string>
    <string name="home_day_temperature">Ngày 3°</string>
    <string name="home_night_temperature">Đêm -1°</string>
    <string name="home_wind_speed_value">12km/h</string>
    <string name="home_wind_speed_change">2 km/h</string>
    <string name="home_pressure_value">720 hpa</string>
    <string name="home_pressure_change">22 hpa</string>
    <string name="home_humidity_value">24%</string>
    <string name="home_humidity_change">10%</string>
    <string name="home_uv_index_value">2,3</string>
    <string name="home_uv_index_change">0,3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="not_account">Bạn chưa có tài khoản?</string>
    <string name="version">Phiên bản 1.0.0</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="remember_password">Nhớ mật khẩu</string>
    <string name="back">Quay lại</string>
    <string name="register_success">Đăng ký thành công</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="loading">Loading</string>
    <string name="error">Lỗi</string>

    <!-- Music strings -->
    <string name="recommend">Recommend</string>
    <string name="artist">Artist</string>
    <string name="all_songs">All Songs</string>
    <string name="songs">Songs</string>

    <string name="today">Hôm nay</string>
    <string name="tomorrow">Ngày mai</string>
    <string name="week">7 ngày tới</string>
    <string name="title_daily_weather">Chi tiết nhiệt độ trong ngày</string>
    <string name="search_location">Tìm kiếm địa điểm</string>

    <string name="logout">Đăng xuất</string>
    <string name="vote">Đánh giá ứng dụng</string>
    <string name="notification">Cài đặt thông báo</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="delete_account">Xóa tài khoản</string>
    <string name="warning">Cảnh báo</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="confirm_new_password">Xác nhận mật khẩu mới</string>
    <string name="no_email">>Không có email</string>
    <string name="no_name">Không có tên</string>
    <string name="add_notify">Thêm thông báo</string>

    <string name="delete_account_confirmation">Bạn có chắc chắn muốn xóa tài khoản của mình?</string>
    <string name="logout_confirmation">Bạn có chắc chắn muốn đăng xuất?</string>
    <string name="change_password_confirmation">Bạn có chắc chắn muốn đổi mật khẩu?</string>
    <string name="delete_account_success">Xóa tài khoản thành công</string>
    <string name="logout_success">Đăng xuất thành công</string>
    <string name="change_password_success">Đổi mật khẩu thành công</string>
    <string name="update_image_success">Cập nhật ảnh đại diện thành công</string>
</resources>
